--- a/css/styles.css
+++ b/css/styles.css
@@ -143,8 +143,34 @@
         border: 0;
         transition: all 2s; 
     }
+
+.fondoFooter{
+    padding: 2rem;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));}
+}
+.estiloLink{
+    border-radius: 1rem;
+    background-color: rgba(255, 255, 255, 0.061);
+    padding: 1rem;
+    margin: auto;
 }
 
+.linkFooter{
+    text-decoration: none;
+    color: white;
+    font-weight: lighter;
+    font-size: larger;
+}
+
+.textoFooter{
+    font-weight: lighter;
+    display: block;
+    margin: auto;
+    border-radius: 1rem;
+    padding: 1rem;
+    color: white;
+    text-align: center;
+}
 */
 * {
   margin: 0;
@@ -153,6 +179,9 @@
 
 main {
   background-color: rgba(1, 0, 41, 0.35); }
+
+.linkNav:hover {
+  color: #0a00cf; }
 
 header .linkNav {
   margin-left: 1rem;
@@ -192,86 +221,6 @@ main .container .row .texto {
 @media (max-width: 540px) {
   main .container .row .texto {
     font-size: x-large; } }
-
-main .container .row .tarjetaLimpiezas {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/limpiezascard2.jpg);
-  padding: 3rem;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: 0;
-  transition: all 2s; }
-  main .container .row .tarjetaLimpiezas .tituloCard {
-    font-weight: lighter;
-    font-size: xx-large;
-    text-align: center;
-    color: white; }
-  main .container .row .tarjetaLimpiezas .parrafoCard {
-    margin-top: 2rem;
-    font-size: x-large;
-    font-weight: lighter;
-    text-align: center;
-    color: white; }
-
-@media (max-width: 540px) {
-  main .container .row .tarjetaLimpiezas .parrafoCard {
-    margin-top: 2rem;
-    font-size: large;
-    font-weight: lighter;
-    text-align: center;
-    color: white; } }
-
-@media (max-width: 1200px) {
-  main .container .row .tarjetaLimpiezas {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 0;
-    transition: all 2s;
-    padding: 3rem; } }
-
-main .tarjetaLimpiezas:hover {
-  transform: scale(1.1);
-  border-radius: 2rem; }
-
-main .container .row .tarjetaLimpiezas {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/limpiezascard2.jpg);
-  padding: 3rem;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: 0;
-  transition: all 2s; }
-  main .container .row .tarjetaLimpiezas .tituloCard {
-    font-weight: lighter;
-    font-size: xx-large;
-    text-align: center;
-    color: white; }
-  main .container .row .tarjetaLimpiezas .parrafoCard {
-    margin-top: 2rem;
-    font-size: x-large;
-    font-weight: lighter;
-    text-align: center;
-    color: white; }
-
-@media (max-width: 540px) {
-  main .container .row .tarjetaLimpiezas .parrafoCard {
-    margin-top: 2rem;
-    font-size: large;
-    font-weight: lighter;
-    text-align: center;
-    color: white; } }
-
-@media (max-width: 1200px) {
-  main .container .row .tarjetaLimpiezas {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/agua.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 0;
-    transition: all 2s;
-    padding: 3rem; } }
-
-main .tarjetaLimpiezas:hover {
-  transform: scale(1.1);
-  border-radius: 2rem; }
 
 main .container .row .tarjetaLimpiezas {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/Images/limpiezascard2.jpg);
@@ -405,45 +354,60 @@ main .tarjetaProductos:hover {
   transform: scale(1.1);
   border-radius: 2rem; }
 
-.imgFooter {
-  margin: auto;
-  display: block;
-  width: 4rem;
-  border-radius: 0.5rem; }
-
-.textoFooter {
-  font-weight: lighter;
-  display: block;
-  margin: auto;
-  border-radius: 1rem;
-  padding: 1rem;
-  color: white;
-  text-align: center; }
-
 .fondoFooter {
   padding: 2rem;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)); }
+  .fondoFooter .estiloLink {
+    border-radius: 1rem;
+    background-color: rgba(249, 249, 249, 0.061);
+    padding: 1rem;
+    margin: auto; }
+    .fondoFooter .estiloLink .row .linkFooter {
+      text-decoration: none;
+      color: white;
+      font-weight: lighter;
+      font-size: larger; }
+  .fondoFooter .container .row .textoFooter {
+    font-weight: lighter;
+    display: block;
+    margin: auto;
+    border-radius: 1rem;
+    padding: 1rem;
+    color: white;
+    text-align: center; }
 
-.linkFooter {
-  text-decoration: none;
-  color: white;
-  font-weight: lighter;
-  font-size: larger; }
+.fondoFooter .estiloLink .row .linkFooter:hover {
+  color: #006eff; }
 
-.estiloLink {
-  border-radius: 1rem;
-  background-color: rgba(255, 255, 255, 0.061);
-  padding: 1rem;
-  margin: auto; }
-
-.mantenimientos {
+.container-fluid .row .fondoAgua .mantenimientos {
   display: flex;
   font-size: 3rem;
   justify-content: center; }
 
-.empresaIdeal {
+.container-fluid .row .fondoAgua .empresaIdeal {
   padding: 2rem;
   font-size: 1.5rem; }
+
+.container .row .textoLimpiezas {
+  text-align: center;
+  color: white;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  font-size: xx-large;
+  font-weight: lighter;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white; }
+
+.container .row .precioLimpieza {
+  color: white;
+  font-size: xx-large;
+  text-align: center;
+  margin-bottom: 5rem;
+  font-weight: lighter; }
+
+@media (max-width: 540px) {
+  .container .row .textoLimpiezas {
+    font-size: x-large; } }
 
 .textoMantenimiento {
   text-align: center;
@@ -484,27 +448,6 @@ main .tarjetaProductos:hover {
 
 .formularioFondo {
   background-color: rgba(1, 0, 41, 0.35); }
-
-.textoLimpiezas {
-  text-align: center;
-  color: white;
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  font-size: xx-large;
-  font-weight: lighter;
-  border-top: 2px solid white;
-  border-bottom: 2px solid white; }
-
-@media (max-width: 540px) {
-  .textoLimpiezas {
-    font-size: x-large; } }
-
-.precioLimpieza {
-  color: white;
-  font-size: xx-large;
-  text-align: center;
-  margin-bottom: 5rem;
-  font-weight: lighter; }
 
 .ventaDeproductos {
   display: flex;
