--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -667,3 +667,20 @@ main{
         }
     }
 }
+
+main{
+    .container{
+        .row{
+            .textoContacto{
+                text-align: center;
+                color: rgb(255, 255, 255);
+                padding-top: 6rem;
+                padding-bottom: 6rem;
+                font-size: xx-large;
+                font-weight: lighter;
+                border-top: 2px solid rgb(255, 255, 255);
+                border-bottom: 2px solid white;
+            }
+        }
+    }
+}
